# senior-lianliankan

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  gameLogic.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: icons.ts
src/components/: Board.tsx  Tile.tsx  Toolbar.tsx
wechat-miniprogram/: README.md  app.json  app.ts  app.wxss  miniprogram.d.ts  project.config.json  tsconfig.miniprogram.json
wechat-miniprogram/pages/index/: index.ts  index.wxml  index.wxss
wechat-miniprogram/utils/: gameLogic.ts  icons.ts  types.ts
