[package]
name = "senior_lianliankan"
version = "1.0.0"
description = "适合老人使用的离线连连看小游戏"
authors = ["Family"]
edition = "2021"

[lib]
name = "senior_lianliankan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Keep the transitive time crate on the API expected by cookie 0.18.1.
time = "=0.3.36"
